--- a/AarhusWebDevCoop/Web.config
+++ b/AarhusWebDevCoop/Web.config
@@ -54,7 +54,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="Server=IOANA-PC\SQLEXPRESS;Database=umbraco-database;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="umbracoDbDSN" connectionString="Server=DESKTOP-P3UU5V1\SQLEXPRESS;Database=AarhusWebDev;Integrated Security=true" providerName="System.Data.SqlClient"/>
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
