--- a/AarhusWebDevCoop/App_Data/umbraco.config
+++ b/AarhusWebDevCoop/App_Data/umbraco.config
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT message ANY>
-<!ATTLIST message id ID #REQUIRED>
-<!ELEMENT messageBoard ANY>
-<!ATTLIST messageBoard id ID #REQUIRED>
-<!ELEMENT master ANY>
+<!DOCTYPE root [<!ELEMENT master ANY>
 <!ATTLIST master id ID #REQUIRED>
 <!ELEMENT homePAge ANY>
 <!ATTLIST homePAge id ID #REQUIRED>
@@ -25,6 +21,10 @@
 <!ATTLIST comment id ID #REQUIRED>
 <!ELEMENT members ANY>
 <!ATTLIST members id ID #REQUIRED>
+<!ELEMENT message ANY>
+<!ATTLIST message id ID #REQUIRED>
+<!ELEMENT messageBoard ANY>
+<!ATTLIST messageBoard id ID #REQUIRED>
 ]>
 <root id="-1">
   <homePAge id="1127" key="06ba3340-e01a-4a1f-96b3-c06f2dab4328" parentID="-1" level="1" creatorID="0" sortOrder="1" createDate="2017-10-08T11:30:04" updateDate="2017-10-11T14:21:15" nodeName="HomePage" urlName="homepage" path="-1,1127" isDoc="" nodeType="1062" creatorName="Ioana Foghel" writerName="Ioana Foghel" writerID="0" template="1051" nodeTypeAlias="homePAge">
